--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-regular-svg-icons": "5.13.0",
     "@fortawesome/free-solid-svg-icons": "5.13.0",
     "@fortawesome/react-fontawesome": "0.1.10",
+    "framer": "^1.2.5",
     "node-sass": "^4.14.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
