--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "5.13.0",
     "@fortawesome/react-fontawesome": "0.1.10",
     "framer": "^1.2.5",
+    "framer-motion": "^2.1.0",
     "node-sass": "^4.14.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
