--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-regular-svg-icons": "5.13.0",
     "@fortawesome/free-solid-svg-icons": "5.13.0",
     "@fortawesome/react-fontawesome": "0.1.10",
+    "@popmotion/popcorn": "^0.4.4",
     "framer": "^1.2.5",
     "framer-motion": "^2.1.0",
     "node-sass": "^4.14.1",
